--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express-sessions": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.7",
+    "nodemon": "^2.0.16",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
